这是第二次修改分类页面

--- a/src/category.html
+++ b/src/category.html
@@ -17,6 +17,7 @@
         <div class="left_box">
             <ul class="left_menu"></ul>
         </div>
+        <!-- 右侧渲染 -->
         <div class="right_box">
 
         </div>
