这是第三次修改分类页面testTogit

--- a/src/category.html
+++ b/src/category.html
@@ -14,6 +14,7 @@
 <body>
     @@include('pyg_header.html')
     <div class="pyg_view">
+      <!-- 左侧渲染 -->
         <div class="left_box">
             <ul class="left_menu"></ul>
         </div>
