添加动态注册和登录功能

--- a/src/goods_detail.html
+++ b/src/goods_detail.html
@@ -15,9 +15,18 @@
   <!-- 头部 -->
   @@include('pyg_nav.html',{"pagename":"商品详情"})
   <div class="pyg_view">
-    <!-- 轮播图 -->
-    
-    <!-- 轮播图 -->
+    <!-- 地址 -->
+   <div class="address">
+
+   </div>
+   <!-- 总价 -->
+   <div class="total_price">
+
+   </div>
+   <!-- 订单 -->
+   <div class="good_buy">
+
+   </div>
   </div>
   <!-- 底部 -->
   <footer>
